--- a/day4/Project.toml
+++ b/day4/Project.toml
@@ -1,4 +1,4 @@
-name = "AnotherMyPackage"
+name = "day4"
 uuid = "f1c66aff-a09d-42d5-b8f0-aaee6da1ff2d"
 authors = ["Onoda <onoda.k.829@ms.saitama-u.ac.jp>"]
 version = "0.1.0"
