--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-AnotherMyPackage = "f1c66aff-a09d-42d5-b8f0-aaee6da1ff2d"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+day4 = "f1c66aff-a09d-42d5-b8f0-aaee6da1ff2d"
