--- a/day4/Project.toml
+++ b/day4/Project.toml
@@ -13,3 +13,9 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 LinearAlgebra = "1.11.0"
 Random = "1.11.0"
 Revise = "3.7.6"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
